manifests/ingress-30.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-b819"
    labels:
        app: "diaggarw-b819"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw9ca4-diaggarw-b819.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-b819"
                servicePort: 8080
